# Animated_Background

./: .gitignore  Cargo.toml  README.md  bg.js  bootstrap.js  index.html  package-lock.json  webpack.config.js
docs/: bundle.js  index.html  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
pkg/: index.d.ts
src/: lib.rs
